--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(simulate,lmb_class)
 S3method(tidy,lmb_class)
 S3method(vcov,lmb_class)
 export(as_lm)
+export(lm2prior)
 export(lmb)
 export(predint)
 importFrom(MASS,mvrnorm)
